fix: All link previews get focused when you press shift+tab from message input bar.(ACC-427) (#14518)
After opening right panel options like notification, self deleting message, the focus doesn't shift to the first interactive element of the panel example back button/close button(ACC-426)

--- a/src/style/common/button.less
+++ b/src/style/common/button.less
@@ -521,7 +521,9 @@
   }
 
   &:focus-visible {
-    outline: 1px solid var(--accent-color-300);
+    .focus-outline;
+    .focus-offset;
+    outline-offset: -0.2rem;
   }
 
   body.theme-dark & {
@@ -531,10 +533,6 @@
     &:focus-visible,
     &.active {
       color: var(--accent-color-500);
-    }
-
-    &:focus-visible {
-      outline: 1px solid var(--accent-color-600);
     }
   }
 
